# Siru-Opportunity-Engine-AI

./: .env.example  .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py  middleware.py  schemas.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: audits.py  campaigns.py  crm.py  exports.py  leads.py  outreach.py  proposals.py  reports.py
backend/app/core/: config.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  entities.py
backend/app/services/: __init__.py  ai_engine.py  analyzer.py  crawler.py  google_places.py  jobs.py  leads.py  normalization.py  outreach.py  pdf.py  reports.py  scoring.py  storage.py  vector_store.py
backend/app/workers/: __init__.py  celery_app.py
backend/migrations/: README  env.py
backend/migrations/versions/: 20260510_0001_initial_production_schema.py
backend/tests/: test_ai_engine.py  test_analyzer.py  test_normalization.py  test_scoring.py
docs/: api.md  architecture.md  deployment.md  scoring-system.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: app-shell.tsx  audit-center.tsx  campaign-detail.tsx  campaign-manager.tsx  crm-board.tsx  dashboard-overview.tsx  job-progress.tsx  lead-detail.tsx  lead-workbench.tsx  proposal-center.tsx  reports-center.tsx
frontend/lib/: api.ts  mock-data.ts  utils.ts
frontend/types/: index.ts
infra/: docker-compose.yml
infra/docker/: backend.Dockerfile  frontend.Dockerfile
workers/: README.md
(+12 files in other folders)
