[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "siru-opportunity-engine-backend"
version = "0.1.0"
description = "FastAPI backend for Siru Opportunity Engine AI"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "boto3>=1.35.0",
  "celery>=5.4.0",
  "fastapi>=0.115.0",
  "openai>=1.59.0",
  "playwright>=1.49.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.12",
  "qdrant-client>=1.12.0",
  "redis>=5.1.0",
  "reportlab>=4.2.0",
  "requests>=2.32.0",
  "SQLAlchemy>=2.0.35",
  "uvicorn[standard]>=0.32.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

